@@ -31,6 +31,6 @@ struct afb_hreq;
 
 extern int afb_hswitch_apis(struct afb_hreq *hreq, void *data);
 extern int afb_hswitch_one_page_api_redirect(struct afb_hreq *hreq, void *data);
-extern int afb_hswitch_websocket_switch(struct afb_hreq *hreq, void *data);
+extern int afb_hswitch_upgrade(struct afb_hreq *hreq, void *data);
 
 #endif
