@@ -9,8 +9,14 @@ Version 5.0.11 (next)
    - Report unsupported bindings (#6115)
    - Long pause time on corrupted heap backtrace
 
+  change
+   - websockets now daughters of upgrade
+   - removed function afb_hswitch_websocket_switch
+     replaced by afb_hswitch_upgrade
+
   minor/details
    - Avoid a second call to sigsetjmp on signal
+   - Fix error report of ws-client on TCP
 
 Version 5.0.10
 --------------
